--- a/css/styles.css
+++ b/css/styles.css
@@ -72,6 +72,7 @@
 }
 /*Верх сайта*/
 .header{
+  
   padding-top: 24px;
   padding-bottom: 25px;
   border-bottom: 1px solid var(--header-border-color);
@@ -93,10 +94,10 @@ font-size: 14px;
 line-height: 1.14;
 letter-spacing: 0.02em;
 color: var(--header-link-color);
+transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .header-logo {
 margin-right: 93px;
-
 font-family: Raleway, sans-serif;
 font-weight: 700;
 font-size: 26px;
@@ -109,6 +110,20 @@ color: var(--main-logo-color);
 }
 .header-item:not(:last-child){
   margin-right: 50px;
+}
+
+.header-link.line::after{
+  content: "";
+  width: 100%;
+  height: 4px;
+  background: var(--main-hover-focus-color);
+  border-radius: 2px;
+  display: block;
+  position: absolute;
+  bottom: -32px;
+}
+.header-item {
+  position: relative;
 }
 .header-contacts{
   display: flex;
@@ -127,6 +142,7 @@ color: var(--main-text-color);
 display: flex;
 align-items:center;
 fill: var(--main-text-color);
+transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .header-link:hover,
 .contacts-link:hover,
@@ -237,7 +253,22 @@ color: var(--title-text-color);
   margin-right: 30px;
 }
 .duties-item{
+  position: relative;
   min-width: 370px;
+}
+.duties-up-text{
+position: absolute;
+padding-top: 27px;
+padding-bottom: 27px;
+width: 100%;
+font-size: 14px;
+line-height: 1.14;
+text-align: center;
+letter-spacing: 0.03em;
+text-transform: uppercase;
+color: var(--second-text-color);
+background: rgba(47, 48, 58, 0.8);
+bottom: 0;
 }
 /* Список работников */
 .team {
@@ -296,9 +327,11 @@ color: var(--main-text-color);
   justify-content: center;
   align-items: center;
   border-radius: 50%;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .network-icon{
   fill: var(--icon-color);
+  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .network-link:hover,
 .network-link:focus
@@ -336,6 +369,7 @@ color: #212121;
   border-radius: 4px;
   justify-content: center;
   align-items: center;
+  transition: border 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .partners-link:hover,
 .partners-link:focus{
@@ -343,6 +377,7 @@ color: #212121;
 }
 .partners-icon{
   fill:var(--icon-color);
+  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
   }
   .partners-link:hover .partners-icon,
   .partners-link:focus .partners-icon {
@@ -385,6 +420,7 @@ font-size: 14px;
 line-height: 1.71;
 letter-spacing: 0.03em;
 color: rgba(255, 255, 255, 0.6);
+transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .footer-item:not(:last-child){
   margin-bottom: 9px;
@@ -425,6 +461,8 @@ line-height: 1.62;
 letter-spacing: 0.03em;
 color: var(--portfolio-btn-text-color);
 background-color: var(--second-background-color);
+transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1), background 250ms cubic-bezier(0.4, 0, 0.2, 1), box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
 }
 
 .portfolio-btn:hover,
@@ -439,8 +477,33 @@ background-color: var(--second-background-color);
   margin: -15px;
 }
 .portfolio-item-list {
- *flex-basis:calc(100%/3- 90px);
-margin: 15px;
+ flex-basis:calc(100%/3- 90px);
+  margin: 15px;
+}
+.portfolio-up-space{
+overflow: hidden;
+}
+.portfolio-up-text{
+  position: absolute;
+  top: 0;
+  padding: 63px 24px;
+  font-weight: 400;
+  font-size: 18px;
+  line-height: 1.56;
+  letter-spacing: 0.03em;
+  color: #FFFFFF;
+  background-color: rgba(33, 150, 243, 0.9);
+  height: 100%;
+  transform: translateY(100%);
+  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.portfolio-item-list:hover .portfolio-up-text{
+  transform: translateY(0%);
+  
+}
+.portfolio-link:focus .portfolio-up-text {
+  transform: translateY(0%);
+
 }
 
 .item-border{
@@ -466,10 +529,63 @@ line-height: 1.88;
 letter-spacing: 0.03em;
 color: var(--main-text-color);
 }
-.portfolio-link{
-  display: block;
+.portfolio-up-space{
+  position: relative;
+
 }
+.portfolio-link{
+display: block;
+transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
 .portfolio-link:hover,
 .portfolio-link:focus{
   box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
 }
+.backdrop{
+  position: fixed;
+  top: 0;
+  left: 0%;
+  width: 100%;
+  height: 100%;
+  background: rgba(0, 0, 0, 0.2);
+  transition: opacity 500ms cubic-bezier(0.4, 0, 0.2, 1), visibility 500ms cubic-bezier(0.4, 0, 0.2, 1), transform 500ms cubic-bezier(0.4, 0, 0.2, 1);
+
+}
+.modal{
+  position: absolute;
+  width: 528px;
+  min-height: 581px;
+  border-radius: 4px;
+  background-color: rgba(255, 255, 255, 1);
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+.is-hidden {
+  opacity: 0;
+  pointer-events: none;
+  visibility: hidden;
+  transform: translate(-50%, -50%);
+
+}
+.modal-btn{
+  position: absolute;
+  top: 8px;
+  right: 8px;
+  width: 30px;
+  height: 30px;
+  background-color: rgba(255, 255, 255, 1);
+  border-radius: 50%;
+  cursor: pointer;
+  border: 0px;
+  padding: 0;
+
+}
+.btn-icon{
+  position: absolute;
+  transform: translate(-50%, -50%);
+ 
+}
+
+ 
